--- a/static/index.css
+++ b/static/index.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap');
 @import url('https://unpkg.com/@fortawesome/fontawesome-free@5.15.4/css/all.min.css');
 @keyframes fadeInAnimation {
     0% {
@@ -9,11 +8,12 @@
     }
 }
 
-* {
-    font-family: Roboto;
+@font-face {
+    font-family: A;
+    src: url(AE.otf);
 }
-
 body {
+    font-family: A;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -21,8 +21,14 @@ body {
     animation: fadeInAnimation ease-in-out 0.3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
-    background-image: url('./Uvback2.png');
+    background-color: black;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+      -o-user-select: none;
+     -ms-user-select: none;
+         user-select: none;
 }
+
 
 .fa-magnifying-glass {
     color: white;
@@ -42,7 +48,7 @@ body {
 
 .logo-wrapper .text {
     font-size: 75px;
-    font-family: "Roboto";
+    font-family: A;
     color: #FFF;
 }
 
@@ -65,7 +71,7 @@ footer span {
     margin: 0 15px;
     text-decoration: none;
     color: #FFF;
-    font-size: 15px;
+    font-size: 16px;
 }
 
 footer a {
@@ -94,22 +100,30 @@ form {
 form input {
     background: none;
     font-family: inherit;
-    padding: 0px 17px;
+    padding: 0px 25px;
     height: 48px;
-    border: 1px solid rgb(255, 255, 255, .2);
+    border: 1px solid rgba(253, 253, 253, 0.514);
     color: var(--text-color);
-    border-radius: 3px;
     outline: none;
     width: 350px;
     margin-top: 5px;
-    border-radius: 50px;
     color: #FFF;
 }
 
-form input:focus {
-    border: 1px solid rgba(253, 253, 253, 0.514);
-    border-radius: 6px;
-    animation: fadeInAnimation ease-in-out 0.3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-}
+
+canvas {
+    display: block;
+    vertical-align: bottom;
+    z-index: -1;
+
+  }
+  
+  
+  /* ---- particles.js container ---- */
+  
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
