--- a/static/index.css
+++ b/static/index.css
@@ -21,7 +21,7 @@ body {
     animation: fadeInAnimation ease-in-out 0.3s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
-    background-color: black;
+    background-image: url(./imgs/Karda\ Home@2x.png);
     -webkit-user-select: none;
     -moz-user-select: none;
       -o-user-select: none;
@@ -127,3 +127,5 @@ canvas {
     height: 100%;
     z-index: -1;
   }
+
+ 
